fix: Update bem naming and allow setting the gap on the other containers as well
Per feedback https://github.com/WPMedia/arc-themes-blocks/pull/1334#pullrequestreview-965110575

--- a/.storybook/themes/commerce.scss
+++ b/.storybook/themes/commerce.scss
@@ -400,7 +400,7 @@
 						),
 					),
 				),
-				single-column-regular: (
+				single-column-regular-main: (
 					components: (
 						stack: (
 							gap: var(--global-spacing-12),
@@ -520,7 +520,7 @@
 				quilted-image__wrapper: (
 					grid-template-areas: "top top" "bottom bottom",
 				),
-				single-column-regular: (
+				single-column-regular-main: (
 					components: (
 						stack: (
 							gap: var(--global-spacing-16),
