--- a/blocks/single-column-layout-block/_index.scss
+++ b/blocks/single-column-layout-block/_index.scss
@@ -1,19 +1,22 @@
 @use "@wpmedia/arc-themes-components/scss";
 
-.b-single-column-regular-header {
-	@include scss.block-properties("single-column-regular-header");
-	@include scss.block-components("single-column-regular-header");
-}
-
 .b-single-column-regular {
-	max-width: 90rem; // 1440px
-	width: 100%;
-	margin: auto;
 	@include scss.block-properties("single-column-regular");
 	@include scss.block-components("single-column-regular");
-}
 
-.b-single-column-regular-footer {
-	@include scss.block-properties("single-column-regular-footer");
-	@include scss.block-components("single-column-regular-footer");
+	&__header {
+		@include scss.block-properties("single-column-regular-header");
+		@include scss.block-components("single-column-regular-header");
+	}
+	&__main {
+		max-width: 90rem; // 1440px
+		width: 100%;
+		margin: auto;
+		@include scss.block-properties("single-column-regular-main");
+		@include scss.block-components("single-column-regular-main");
+	}
+	&__footer {
+		@include scss.block-properties("single-column-regular-footer");
+		@include scss.block-components("single-column-regular-footer");
+	}
 }
